Food menu & User pages rendered

--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -17,7 +17,11 @@
         {% render './navbar.liquid', loggedIn: loggedIn, username: username, userId: userId %}
     </header>
     <main>
+
+        
+
         {% block content %} 
+        Hello
         {% endblock %}
     </main>
     <footer></footer>
