--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,17 @@
-body{
-    background-color: bisque;
+.home{
+    /* background-image: url('https://as1.ftcdn.net/v2/jpg/03/10/83/10/1000_F_310831053_VWY0criywOIVVCdmyV3UMfQX17ukKlLg.jpg'); */
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* background-color: pink; */
+}
+
+img{
+    height: 200px;
+    width: 250px;
+    text-align: center;
+    border-radius: 10px;
+}
+#logo{
+    height: 60px;
+    width: 80px;
 }
