--- a/views/menu/index.liquid
+++ b/views/menu/index.liquid
@@ -7,6 +7,7 @@
         <div style="width: 18rem;">
             <img src={{ m.img }}>
             <h5> {{m.name}} </h5>
+            <button type="button" class="btn btn-danger" onclick="addToCart()">Add to Cart</button>
             {%- comment -%} <div class="card-body">
                 <h5 class="card-title">
                     Ready?: {{ example.ready }}
