--- a/views/navbar.liquid
+++ b/views/navbar.liquid
@@ -12,7 +12,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             {% if loggedIn %}
-                <a href="/users/cart" class="nav-link text-danger me-3">{{ username }} </a>
+                <a href="/users/cart" class="nav-link text-danger me-3">{{ username }}-cart </a>
                 <a href="/menu" class="nav-link text-light me-3">Menu</a>
                 <a href="/users/logout" class="nav-link text-light me-3">LogOut</a>
             {% else %}
