--- a/views/navbar.liquid
+++ b/views/navbar.liquid
@@ -1,5 +1,3 @@
-
-
 {% block content %}
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container-fluid">
@@ -12,13 +10,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             {% if loggedIn %}
-                <a href="/menu/cart" class="nav-link text-danger me-3">{{ username }}-cart </a>
+                <a href="/cart" class="nav-link text-danger me-3">{{ username }}-cart </a>
                 <a href="/menu" class="nav-link text-light me-3">Menu</a>
                 <a href="/users/logout" class="nav-link text-light me-3">LogOut</a>
             {% else %}
                 <a href="/menu" class="nav-link text-light me-3">Menu</a>
                 <a href="/users/signup" class="nav-link text-light me-3">SignUp</a>
-                <a href="/users/login" class="nav-link text-light me-3">SignIn</a>
+                <a href="/users/login" class="nav-link text-light me-3">Login</a>
             {% endif %}
         </div>
     </div>
