--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,35 @@
+body{
+    color: #5E9CA0;
+}
 .home{
     /* background-image: url('https://as1.ftcdn.net/v2/jpg/03/10/83/10/1000_F_310831053_VWY0criywOIVVCdmyV3UMfQX17ukKlLg.jpg'); */
     background-repeat: no-repeat;
     background-size: cover;
+
     /* background-color: pink; */
 }
+#nav{
+    background-color: #ACD3CD;
+}
+#homeHeading{
+    height: 70vh;
 
+}
+
+.col-sm{
+    margin-top: 20px;
+}
+#linkedin, #facebook, #instagram{
+    margin-top: 10px;
+    height: 30px;
+    width: 30px;
+    margin-right: 15px;
+}
+#location{
+    margin-top: 0;
+    height: 70px;
+    width: 70px;
+}
 img{
     height: 200px;
     width: 250px;
