--- a/views/home.liquid
+++ b/views/home.liquid
@@ -1,6 +1,40 @@
 {% layout 'layout.liquid'%}
 {% block content %}
-<div class="home">
-Home
+
+<main>
+ <div class=" card bg-white text-dark">
+  <img class="card-img" id='homeHeading' src="https://st.depositphotos.com/1001069/4227/i/600/depositphotos_42278691-stock-photo-fresh-ingredients-for-cooking.jpg">
+  <div class="card-img-overlay">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text">Last updated 3 mins ago</p>
+  </div>
+</div> 
+
+
+
+</main>
+
+<footer>
+    <div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <a href=""><img id='location' src="https://cdn3.iconfinder.com/data/icons/social-media-2129/512/Social_Media-09-128.png" alt=""></a><br>
+      
+    </div>
+    <div class="col-sm">
+      <a href="">About</a><br>
+      <a href="">Contact Us</a>
+    </div>
+    <div class="col-sm">
+      <a href=""><img id='linkedin' src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Linkedin_unofficial_colored_svg-256.png" alt=""></a>
+      <a href=""><img id='instagram' src="https://cdn2.iconfinder.com/data/icons/social-media-applications/64/social_media_applications_3-instagram-128.png" alt=""></a>
+      <a href=""><img id='facebook' src="https://cdn1.iconfinder.com/data/icons/social-media-2285/512/Colored_Facebook3_svg-128.png" alt=""></a>
+    </div>
+  </div>
 </div>
+</footer>
+
+
+
 {% endblock %}
