--- a/views/menu/index.liquid
+++ b/views/menu/index.liquid
@@ -8,7 +8,7 @@
             <img src={{ m.img }}>
             <h5> {{m.name}} - ${{m.price}}</h5>
             
-            <a href = "/cart/{{m._id}}"><button type="button" class="btn btn-danger">Add to Cart</button><a>
+            <a href = "/cart/{{m.id}}"><button type="button" class="btn btn-danger">Add to Cart</button><a>
             {%- comment -%} <div class="card-body">
                 <h5 class="card-title">
                     Ready?: {{ example.ready }}
