--- a/views/navbar.liquid
+++ b/views/navbar.liquid
@@ -1,7 +1,7 @@
 {% block content %}
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark" id="nav">
     <div class="container-fluid">
-        <a href="/" class="navbar-brand">Home</a>
+        <a href="/" class="navbar-brand text-dark">Home</a>
         {%- comment -%} {% if loggedIn %}
         <a href="/users/cart" class="nav-link text-light">Hello {{ username }} </a>
         {% endif %} {%- endcomment -%}
@@ -11,12 +11,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             {% if loggedIn %}
                 <a href="/cart" class="nav-link text-danger me-3">{{ username }}-cart </a>
-                <a href="/menu" class="nav-link text-light me-3">Menu</a>
-                <a href="/users/logout" class="nav-link text-light me-3">LogOut</a>
+                <a href="/menu" class="nav-link text-dark me-3">Menu</a>
+                <a href="/users/logout" class="nav-link text-dark me-3">LogOut</a>
             {% else %}
-                <a href="/menu" class="nav-link text-light me-3">Menu</a>
-                <a href="/users/signup" class="nav-link text-light me-3">SignUp</a>
-                <a href="/users/login" class="nav-link text-light me-3">Login</a>
+                <a href="/menu" class="nav-link text-dark me-3">Menu</a>
+                <a href="/users/signup" class="nav-link text-dark me-3">SignUp</a>
+                <a href="/users/login" class="nav-link text-dark me-3">Login</a>
             {% endif %}
         </div>
     </div>
