--- a/views/cart.liquid
+++ b/views/cart.liquid
@@ -1,4 +1,11 @@
 {% layout 'layout.liquid' %}
 {% block content %}
-Cart Page
+<h1>This is Cart view</h1>
+
+<div class="container-md">
+    <article>
+        <h2>{{menu.img}}</h2>
+        <h2>{{menu.price}}</h2>
+    </article>
+</div>
 {% endblock %}
