--- a/views/showCart.liquid
+++ b/views/showCart.liquid
@@ -1,5 +1,12 @@
 {% layout 'layout.liquid' %}
 {% block content %}
+<h1>This is showCart view</h1>
+<div class="container-md">
+    <article>
+        <h2>{{menu.img}}</h2>
+        <h2>{{menu.price}}</h2>
+    </article>
+</div>
 
-<h2>{{menu.img}}</h2>
+
 {% endblock %}
