Cart-Controller Routes all working in POSTMAN

--- a/views/cart.liquid
+++ b/views/cart.liquid
@@ -4,8 +4,9 @@
 
 <div class="container-md">
     <article>
-        <h2>{{menu.img}}</h2>
-        <h2>{{menu.price}}</h2>
+        <h2> Present Cart </h2>
+        
+        <h2> Cart History </h2>
     </article>
 </div>
 {% endblock %}
