--- a/views/cart.liquid
+++ b/views/cart.liquid
@@ -1,12 +1,26 @@
 {% layout 'layout.liquid' %}
 {% block content %}
-<h1>This is Cart view</h1>
+  <h1>This is Cart view</h1>
 
-<div class="container-md">
+  <div class="container-md">
     <article>
-        <h2> Present Cart </h2>
-        
-        <h2> Cart History </h2>
+      <h2>
+        Present Cart
+      </h2>
+      {%- comment -%} <a href="/cart/show/{{cart.id}}" class="nav-link text-dark me-3">MyCart</a> {%- endcomment -%}
+
+      <form action="/cart/{{cart.id}}/show" method="GET">
+        <input type="submit" class="btn btn-danger" value="CART">
+      </form>
+
+        <h2>
+            Cart History
+        </h2>
+
+      <form action="/cart/checkout/{{cart.id}}_method=PUT" method="POST">
+        <input type="submit" class="btn btn-primary" value="History">
+      </form>
+  
     </article>
-</div>
+  </div>
 {% endblock %}
