--- a/views/navbar.liquid
+++ b/views/navbar.liquid
@@ -1,25 +1,28 @@
 {% block content %}
-<nav class="navbar navbar-expand-md navbar-dark" id="nav">
+  <nav class="navbar navbar-expand-md navbar-dark" id="nav">
     <div class="container-fluid">
-        <a href="/" class="navbar-brand text-dark">Home</a>
-        {%- comment -%} {% if loggedIn %}
+      <a href="/" class="navbar-brand text-dark">Home</a>
+      {%- comment -%}
+        {% if loggedIn %}
         <a href="/users/cart" class="nav-link text-light">Hello {{ username }} </a>
-        {% endif %} {%- endcomment -%}
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            {% if loggedIn %}
-                <a href="/cart" class="nav-link text-danger me-3">{{ username }} </a>
-                <a href="/menu" class="nav-link text-dark me-3">Menu</a>
-                <a href="/users/logout" class="nav-link text-dark me-3">LogOut</a>
-                <a href="cart/show/{{cart.id}}" class="nav-link text-dark me-3">MyCart</a>
-            {% else %}
-                <a href="/menu" class="nav-link text-dark me-3">Menu</a>
-                <a href="/users/signup" class="nav-link text-dark me-3">SignUp</a>
-                <a href="/users/login" class="nav-link text-dark me-3">Login</a>
-            {% endif %}
-        </div>
+        {% endif %}
+      {%- endcomment -%}
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        {% if loggedIn %}
+          <a href="/cart" class="nav-link text-danger me-3">{{ username }}
+          </a>
+          <a href="/menu" class="nav-link text-dark me-3">Menu</a>
+          <a href="/users/logout" class="nav-link text-dark me-3">LogOut</a>
+         
+        {% else %}
+          <a href="/menu" class="nav-link text-dark me-3">Menu</a>
+          <a href="/users/signup" class="nav-link text-dark me-3">SignUp</a>
+          <a href="/users/login" class="nav-link text-dark me-3">Login</a>
+        {% endif %}
+      </div>
     </div>
-</nav>
+  </nav>
 {% endblock %}
