--- a/views/showCart.liquid
+++ b/views/showCart.liquid
@@ -1,12 +1,11 @@
 {% layout 'layout.liquid' %}
 {% block content %}
 <h1>This is showCart view</h1>
-<div class="container-md">
-    <article>
-        <h2>{{menu.img}}</h2>
-        <h2>{{menu.price}}</h2>
-    </article>
-</div>
+{% for item in cart.items %}
+    <h2>{{item.name}}</h2>
+    <img src="{{item.img}}">
+
+{% endfor %}
 
 
 {% endblock %}
