--- a/views/showCart.liquid
+++ b/views/showCart.liquid
@@ -7,5 +7,9 @@
 
 {% endfor %}
 
+ <form action="/cart/checkout/{{cart.id}}?_method=PUT" method="POST">
+        <input type="submit" class="btn btn-primary" value="Payment">
+</form>
+
 
 {% endblock %}
