Order History Created

--- a/views/cart.liquid
+++ b/views/cart.liquid
@@ -16,9 +16,8 @@
             Cart History
         </h2>
 
-      <form action="/cart/checkout/{{cart.id}}_method=PUT" method="POST">
-        <input type="submit" class="btn btn-primary" value="History">
-      </form>
+      <a href="/cart/checkout"><button type="button" class="btn btn-primary">Order History</button></a>
+      
   
     </article>
   </div>
