--- a/views/home.liquid
+++ b/views/home.liquid
@@ -3,11 +3,11 @@
 
 <main>
  <div class=" card bg-white text-dark">
-  <img class="card-img" id='homeHeading' src="https://st.depositphotos.com/1001069/4227/i/600/depositphotos_42278691-stock-photo-fresh-ingredients-for-cooking.jpg">
+  <img class="card-img" id='homeHeading' src="https://t4.ftcdn.net/jpg/00/92/79/57/240_F_92795795_1gG69m9STYv2I4pjUYlRqnWdJ4Ca21ot.jpg">
   <div class="card-img-overlay">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    <p class="card-text">Last updated 3 mins ago</p>
+    <h1 class="card-title" id="home-title">INDI EATS</h1>
+    {%- comment -%} <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text">Last updated 3 mins ago</p> {%- endcomment -%}
   </div>
 </div> 
 
@@ -19,12 +19,13 @@
     <div class="container">
   <div class="row">
     <div class="col-sm">
-      <a href=""><img id='location' src="https://cdn3.iconfinder.com/data/icons/social-media-2129/512/Social_Media-09-128.png" alt=""></a><br>
+      <a href=""><img id='location' src="https://www.dummies.com/wp-content/uploads/324172.image0.jpg" alt=""></a><br>
       
     </div>
     <div class="col-sm">
       <a href="">About</a><br>
       <a href="">Contact Us</a>
+      
     </div>
     <div class="col-sm">
       <a href=""><img id='linkedin' src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Linkedin_unofficial_colored_svg-256.png" alt=""></a>
