--- a/views/navbar.liquid
+++ b/views/navbar.liquid
@@ -12,7 +12,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         {% if loggedIn %}
-          <a href="/cart" class="nav-link text-danger me-3">{{ username }}
+        {%- comment -%} <a href="/cart" class="nav-link text-danger me-3 -lg" id="nav-cart"><img src="https://png.pngtree.com/element_our/20190528/ourmid/pngtree-cartoon-restaurant-icon-design-image_1168957.jpg" alt=""></a> {%- endcomment -%}
+          <a href="/cart" class="nav-link text-danger me-3 -lg" id="nav-cart">{{ username }} <img id=cartimg src="https://img.icons8.com/external-vitaliy-gorbachev-fill-vitaly-gorbachev/512/external-shopping-cart-sales-vitaliy-gorbachev-fill-vitaly-gorbachev-1.png" alt="">
           </a>
           <a href="/menu" class="nav-link text-dark me-3">Menu</a>
           <a href="/users/logout" class="nav-link text-dark me-3">LogOut</a>
