--- a/views/home.liquid
+++ b/views/home.liquid
@@ -23,14 +23,14 @@
       
     </div>
     <div class="col-sm">
-      <a href="">About</a><br>
-      <a href="">Contact Us</a>
+      <a href="/menu/aboutus">Contact us</a><br>
+      <a href="https://www.google.com/maps/place/444+Warren+St,+Jersey+City,+NJ+07302/@40.7236031,-74.040453,17z/data=!4m13!1m7!3m6!1s0x89c250acefa6e773:0x3fdbeb1711feef06!2s444+Warren+St,+Jersey+City,+NJ+07302!3b1!8m2!3d40.7235991!4d-74.0378781!3m4!1s0x89c250acefa6e773:0x3fdbeb1711feef06!8m2!3d40.7235991!4d-74.0378781"><img id='facebook' src="https://cdn-icons-png.flaticon.com/128/535/535188.png" alt=""></a>
       
     </div>
     <div class="col-sm">
-      <a href=""><img id='linkedin' src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Linkedin_unofficial_colored_svg-256.png" alt=""></a>
-      <a href=""><img id='instagram' src="https://cdn2.iconfinder.com/data/icons/social-media-applications/64/social_media_applications_3-instagram-128.png" alt=""></a>
-      <a href=""><img id='facebook' src="https://cdn1.iconfinder.com/data/icons/social-media-2285/512/Colored_Facebook3_svg-128.png" alt=""></a>
+      <a href="https://www.linkedin.com/company/zomato/?originalSubdomain=in"><img id='linkedin' src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Linkedin_unofficial_colored_svg-256.png" alt=""></a>
+      <a href="https://www.instagram.com/explore/locations/208388842871984/homepage/?hl=en"><img id='instagram' src="https://cdn2.iconfinder.com/data/icons/social-media-applications/64/social_media_applications_3-instagram-128.png" alt=""></a>
+      <a href="https://www.facebook.com/facebook/"><img id='facebook' src="https://cdn1.iconfinder.com/data/icons/social-media-2285/512/Colored_Facebook3_svg-128.png" alt=""></a>
     </div>
   </div>
 </div>
