--- a/views/navbar.liquid
+++ b/views/navbar.liquid
@@ -1,7 +1,7 @@
 {% block content %}
   <nav class="navbar navbar-expand-md navbar-dark" id="nav">
     <div class="container-fluid">
-      <a href="/" class="navbar-brand text-dark">Home</a>
+      <a href="/" class="navbar-brand text-light">Home</a>
       {%- comment -%}
         {% if loggedIn %}
         <a href="/users/cart" class="nav-link text-light">Hello {{ username }} </a>
@@ -13,15 +13,15 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         {% if loggedIn %}
         {%- comment -%} <a href="/cart" class="nav-link text-danger me-3 -lg" id="nav-cart"><img src="https://png.pngtree.com/element_our/20190528/ourmid/pngtree-cartoon-restaurant-icon-design-image_1168957.jpg" alt=""></a> {%- endcomment -%}
-          <a href="/cart" class="nav-link text-danger me-3 -lg" id="nav-cart">{{ username }} <img id=cartimg src="https://img.icons8.com/external-vitaliy-gorbachev-fill-vitaly-gorbachev/512/external-shopping-cart-sales-vitaliy-gorbachev-fill-vitaly-gorbachev-1.png" alt="">
+          <a href="/cart" class="nav-link text-danger me-3 -lg" id="nav-cart">{{ username }} <img id=cartimg src="https://cdn-icons-png.flaticon.com/128/8181/8181590.png" alt="">
           </a>
-          <a href="/menu" class="nav-link text-dark me-3">Menu</a>
-          <a href="/users/logout" class="nav-link text-dark me-3">LogOut</a>
+          <a href="/menu" class="nav-link text-light me-3">Menu</a>
+          <a href="/users/logout" class="nav-link text-light me-3">LogOut</a>
          
         {% else %}
-          <a href="/menu" class="nav-link text-dark me-3">Menu</a>
-          <a href="/users/signup" class="nav-link text-dark me-3">SignUp</a>
-          <a href="/users/login" class="nav-link text-dark me-3">Login</a>
+          <a href="/menu" class="nav-link text-light me-3">Menu</a>
+          <a href="/users/signup" class="nav-link text-light me-3">SignUp</a>
+          <a href="/users/login" class="nav-link text-light me-3">Login</a>
         {% endif %}
       </div>
     </div>
