--- a/views/aboutus.liquid
+++ b/views/aboutus.liquid
@@ -1,14 +1,14 @@
 {% layout 'layout.liquid'%}
 {% block content %}
    
-<div id='aboutus' style="width: 18rem;"">
-  <h1>About Us Page</h1>
-  <p>Some text about who we are and what we do.</p>
-  <p>Resize the browser window to see that this page is responsive by the way.</p>
-</div>
-<div class="cardgroup">
-    <div class="row"  >
-        <div class="card aboutcard" style="width: 18rem;">
+
+  <h2>About Us</h2>
+  Some text about who we are and what we do.
+  Resize the browser window to see that this page is responsive by the way.
+
+<div class="cardgroup me-3">
+    <div class="row me-3"  >
+        <div class="card me-3" style="width: 18rem;">
             <img class="card-img-top" src="https://media.licdn.com/dms/image/C4D03AQHpTL0O8S48zw/profile-displayphoto-shrink_800_800/0/1652666811836?e=1680739200&v=beta&t=PWRx_OeUWfaLSH7pHYvpljujeJd1CXFEqSg9mWVEb08" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Rita H Chauhan</h5>
@@ -18,7 +18,7 @@
             </div>
         </div>
 
-        <div class="card " style="width: 18rem;">
+        <div class="card me-3 " style="width: 18rem;">
             <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTruYNKCRc2Yn6qFHnDq0N0MkhcU20zZLDhAA&usqp=CAU" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Hameer Chauhan</h5>
