--- a/views/showCart.liquid
+++ b/views/showCart.liquid
@@ -22,7 +22,7 @@
             
                 <div style="width: 18rem;">
 
-                    <div class="card" style="width: 18rem;">
+                    <div class="card me-3" style="width: 18rem;">
                         
                         <img class="card-img-top" src={{item.img}} alt="Card image cap">
                         
