--- a/views/users/logout.liquid
+++ b/views/users/logout.liquid
@@ -3,7 +3,7 @@
     <div class="container-md text-center">
         <h2>Are you sure you would like to log out?</h2>
         <div class="btn-group" id="logout">
-            <a href="/" class="btn btn-warning me-3">No, back to home page</a>
+            <a href="/" class="btn  me-3 btn-primary text-light">No, back to home page</a>
             
             <form action="/users/logout?_method=DELETE" method="POST">
                 <input type="submit" class="btn btn-danger" value="Yes, log me out">
