--- a/views/aboutus.liquid
+++ b/views/aboutus.liquid
@@ -2,9 +2,11 @@
 {% block content %}
    
 
-  <h2>About Us</h2>
-  Some text about who we are and what we do.
-  Resize the browser window to see that this page is responsive by the way.
+  <h2>ABOUT US</h2>
+  <p>Launched in 2023, Our technology platform connects customers with our delicious food, provided at feasible prices within 30 min at your door step!
+<br>
+<br>
+  Availability: Our app is available in 800+ cities in the U.S. and Canada, including Atlanta, Seattle, Boston, New York, and Chicago, among others.</p>
 
 <div class="cardgroup me-3">
     <div class="row me-3"  >
