--- a/views/menu/index.liquid
+++ b/views/menu/index.liquid
@@ -169,7 +169,7 @@
                         </ul>
                         {% if loggedIn %}
                         <div class="card-body">
-                            <a href="/cart/{{m.id}}" class="btn btn-danger" onclick="myFunctionD()">Add to Card</a>
+                            <a href="/cart/{{m.id}}" class="btn btn-danger" onclick="myFunctionD()">Add to Cart</a>
                             <script>
                                 function myFunctionD() {
                                 alert(" Dessert added to Cart!");
